-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.0.0 Beta 1, 5.0.0
-
None
-
qtbase 4350054ab86b03b2a4e6641238b762fd80a3c5dd
Using xcb platform plugin
Xorg 1.12.2
-
e4cea305ed2ba3c9f580bf9d16c59a1048af0e8a
Calling QWindow::show() may remove a hint from the _NET_WM_STATE window property previously set by the programmer. The reason for this is that QXcbWindow::setNetWmStates ignores hints not supported by Qt (i.e. sticky).
This is a regression from Qt 4, which declares in dist/changes-4.3.1:
| QWidget now merges any existing _NET_WM_STATE property together with its own state. |
|---|
- is required for
-
QTBUG-50458 cannot create a "sticky" window via QWindow flags (_NET_WM_STATE_STICKY)
-
- Reported
-
- relates to
-
QTBUG-41310 QXcbWindow::setAlertState sets property instead of sending client message
-
- Closed
-