xcb: Merge _NET_WM_STATE hints instead of overwriting

This makes possible to set custom _NET_WM_STATE hints before
showing the window.

Change-Id: I86ad3863f7a8b3bb610a31b9af4b02c9d38eb111
Task-number: QTBUG-26978
Reviewed-by: Ilya Kotov
Reviewed-by: Shawn Rutledge <shawn.rutledge@theqtcompany.com>
Reviewed-by: Uli Schlachter <psychon@znc.in>